주석제거 및 코드 정리