@@ -158,17 +158,20 @@ public class Lattice {
 
     private void putIrregularExtendTokens(int beginIdx, int endIdx,
                                           List<Pair<String, Integer>> irregularTokens, double prevMaxScore, int prevMaxIdx) {
-
+    	
+    	Pair<String, Integer> morphTagId = null;
+    	List<ScoredTag> scoredTags = null;
+    	
         if (irregularTokens.size() == 1) {
-            Pair<String, Integer> morphPosId = irregularTokens.get(0);
-            List<ScoredTag> scoredTags = this.observation.getTrieDictionary().getValue(morphPosId.getFirst());
+            morphTagId = irregularTokens.get(0);
+            scoredTags = this.observation.getTrieDictionary().getValue(morphTagId.getFirst());
             for (ScoredTag scoredTag : scoredTags) {
-                if (scoredTag.getTagId() == morphPosId.getSecond()) {
-                    LatticeNode firstIrregularNode = this.makeNode(beginIdx, endIdx, morphPosId.getFirst(), scoredTag.getTag(), scoredTag.getTagId(), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
+                if (scoredTag.getTagId() == morphTagId.getSecond()) {
+                    LatticeNode firstIrregularNode = this.makeNode(beginIdx, endIdx, morphTagId.getFirst(), scoredTag.getTag(), scoredTag.getTagId(), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
                     this.appendNode(firstIrregularNode);
                     //마지막 노드가 EC인 경우에는 EF를 변환하여 노드를 추가한다
                     if (scoredTag.getTagId() == SEJONGTAGS.EC_ID) {
-                        LatticeNode extendIrregularNode = this.makeNode(beginIdx, endIdx, morphPosId.getFirst(), SYMBOL.EF, this.posTable.getId(SYMBOL.EF), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
+                        LatticeNode extendIrregularNode = this.makeNode(beginIdx, endIdx, morphTagId.getFirst(), SYMBOL.EF, this.posTable.getId(SYMBOL.EF), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
                         this.appendNode(extendIrregularNode);
                     }
                 }
@@ -178,11 +181,11 @@ public class Lattice {
         
         //첫번쨰 토큰에 대한 처리
         if (irregularTokens.size() != 0) {
-            Pair<String, Integer> morphPosId = irregularTokens.get(0);
-            List<ScoredTag> scoredTags = this.observation.getTrieDictionary().getValue(morphPosId.getFirst());
+            morphTagId = irregularTokens.get(0);
+            scoredTags = this.observation.getTrieDictionary().getValue(morphTagId.getFirst());
             for (ScoredTag scoredTag : scoredTags) {
-                if (scoredTag.getTagId() == morphPosId.getSecond()) {
-                    LatticeNode firstIrregularNode = this.makeNode(beginIdx, irrIdx - 1, morphPosId.getFirst(), scoredTag.getTag(), scoredTag.getTagId(), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
+                if (scoredTag.getTagId() == morphTagId.getSecond()) {
+                    LatticeNode firstIrregularNode = this.makeNode(beginIdx, irrIdx - 1, morphTagId.getFirst(), scoredTag.getTag(), scoredTag.getTagId(), prevMaxScore + scoredTag.getScore(), prevMaxIdx);
                     irrIdx--;
                     this.appendNode(firstIrregularNode);
                 }
@@ -190,36 +193,32 @@ public class Lattice {
         }
 
         for (int i = 1; i < irregularTokens.size(); i++) {
-            Pair<String, Integer> morphPosId = irregularTokens.get(i);
+            morphTagId = irregularTokens.get(i);
+        	scoredTags = this.observation.getTrieDictionary().getValue(morphTagId.getFirst());
             //마지막 토큰에 대해서는 IRR 태그를 넣어줌 이때 score는 0.0을 줌
             if (i == irregularTokens.size() - 1) {
-//			이 부분도 필요한지 모르겠습니다. 
-/*
-            	List<ScoredTag> scoredTags = this.observation.getTrieDictionary().getValue(morphPosId.getFirst());
                 for (ScoredTag scoredTag : scoredTags) {
-                    if (scoredTag.getTagId() == morphPosId.getSecond()) {
-                        this.put(irrIdx, endIdx, morphPosId.getFirst(), this.posTable.getPos(morphPosId.getSecond()), morphPosId.getSecond(), scoredTag.getScore());
-                        if (morphPosId.getSecond() == SEJONGTAGS.EC_ID) {
-                            this.put(irrIdx, endIdx, morphPosId.getFirst(), SYMBOL.EF, SEJONGTAGS.EF_ID, scoredTag.getScore());
+                    if (scoredTag.getTagId() == morphTagId.getSecond()) {
+                        this.put(irrIdx, endIdx, morphTagId.getFirst(), this.posTable.getPos(morphTagId.getSecond()), morphTagId.getSecond(), scoredTag.getScore());
+                        if (morphTagId.getSecond() == SEJONGTAGS.EC_ID) {
+                            this.put(irrIdx, endIdx, morphTagId.getFirst(), SYMBOL.EF, SEJONGTAGS.EF_ID, scoredTag.getScore());
                         }
                     }
                 }
-*/
-                LatticeNode latticeNode = this.makeNode(irrIdx, endIdx, morphPosId.getFirst(), SYMBOL.IRREGULAR, IRREGULAR_POS_ID, 0.0, 0);
+                LatticeNode latticeNode = this.makeNode(irrIdx, endIdx, morphTagId.getFirst(), SYMBOL.IRREGULAR, IRREGULAR_POS_ID, 0.0, 0);
                 this.appendNode(latticeNode);
 
             } else {
-                List<ScoredTag> scoredTags = this.observation.getTrieDictionary().getValue(morphPosId.getFirst());
                 for (ScoredTag scoredTag : scoredTags) {
-                    if (scoredTag.getTagId() == morphPosId.getSecond()) {
-                        this.put(irrIdx, irrIdx - 1, morphPosId.getFirst(), this.posTable.getPos(morphPosId.getSecond()), morphPosId.getSecond(), scoredTag.getScore());
+                    if (scoredTag.getTagId() == morphTagId.getSecond()) {
+                        this.put(irrIdx, irrIdx - 1, morphTagId.getFirst(), this.posTable.getPos(morphTagId.getSecond()), morphTagId.getSecond(), scoredTag.getScore());
                     }
                 }
             }
             irrIdx--;
         }
     }
-
+/*
     private void putFirstIrregularNode(int beginIdx, int endIdx,
                                        List<Pair<String, Integer>> irregularTokens, double score,
                                        int maxTransitionPrevIdx) {
@@ -250,7 +249,7 @@ public class Lattice {
 
         }
     }
-
+*/
     public boolean put(int beginIdx, int endIdx, String morph, String tag, int tagId, double score) {
 
         List<LatticeNode> prevLatticeNodes = this.getNodeList(beginIdx);
@@ -515,7 +514,7 @@ public class Lattice {
         return shortestPathList;
     }
 
-
+/*
     private void putIrregularTokens(int beginIdx, int endIdx, List<Pair<String, Integer>> morphPosIdList) {
 
         for (int i = 1; i < morphPosIdList.size(); i++) {
@@ -540,7 +539,7 @@ public class Lattice {
             irrIdx--;
         }
     }
-
+*/
     public void setObservation(Observation observation) {
         this.observation = observation;
     }
